# learn-python

./: .gitignore  README.md  datascience-intro.md  pyproject.toml
basics/: list_basics.py  loop_basics.py  tuples_basics.py
python-concepts/: comprehensions.py  conditionals_basics.py  currying.py  dictionary_basics.py  functions_basics.py  higher_order_functions.py  lambda_functions.py  loop_basics.py  operators_basics.py  polymorphism.py  shallow-deep-copy.py  tuples_basics.py  yield_generators.py
python-concepts/101/: README.md  exception_basics.py  functions_basics.py  list_basics.py  polymorphism.py  recursion.py  relative_imports.py  scopes.py  storing_data.py  string_basics.py  user_inputs.py
python-concepts/102/: README.md  datascience-intro.md  stat_functions.py  static_visualizations.py  two_dimensional_list.py
python-concepts/103/: README.md
python-concepts/pizza_functions/: deliver.py
python-concepts/restaurants/: restaurant.py
python-crash-course-3rd-ed/: dictionary_basics.py  find_ordinal.py  hashing.py  list_basics.py  loop_basics.py  lottery_analysis.py  operators_basics.py  random_dice.py  relative_imports.py  set_basics.py  storing_data.py  string_basics.py  test_string_basics.py  user_inputs.py
udemy-automate-with-python/: advanced-strings.py  basics.py  dataStructures.py  email_basics.py  files_basics.py  files_shelve.py  files_shutil.py  fun-strings.py  list-methods.py  lists.py  pdf_example.py  regExBasics.py  regex_greedy_nongreedy.py  regex_other_options.py  selenium_example.py  web_browser.py  xl_example.py
(+84 files in other folders)
