[tool.poetry]
name = "learn-python"
version = "0.1.0"
description = "Vidhya's practice repository for learning python"
authors = ["Vidhya Chidambaram <vidhya.chidambaram@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
